--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ h1{
     line-height: 1;
     margin-bottom: 1em;
     text-align: center;
+    font-size: 2.125rem;
 }
 
 h2,h3{
@@ -84,8 +85,16 @@ h2,h3{
     padding-left: 5px;
 }
 
+h2{
+    font-size: 1.75rem;
+}
+
+h3{
+    font-size: 1.45rem;
+}
+
 p{
-    font-family: sans-serif;
+    font-family: 'Alegreya Sans', sans-serif;
     font-size: 1.125rem;
     margin-bottom: 1em;
     padding-left: 5px;
@@ -460,6 +469,7 @@ a{text-decoration: none;}
     p{
         font-size: 1.3125rem;
     }
+
 
     #intro{
         margin: auto;
