--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@ nav a{
     font-size: 21px;
     text-decoration: none;
     opacity: 0;
-    transform: 250ms ease-in-out;
+    transition-duration: 250ms;
     text-shadow:0 0 0.100em #F2F2F2,0 0 1em #809292;
     position: relative;
 }
@@ -289,6 +289,12 @@ footer{
     padding-top: 20px;
 }
 
+.video{
+    height: 300px;
+    width: 100%;
+    max-width: 400px;
+    
+}
 
 a{text-decoration: none;}
 
@@ -406,6 +412,13 @@ a{text-decoration: none;}
     height: 100%;
 }
 
+.knap{
+    margin: 20px auto auto auto;
+    width: 200px;
+    background-color: var(--clr-primary-500);
+    text-align: center;
+    border: green 4px solid;
+}
 
 @media screen and (min-width: 760px){
     .skillsets {
