--- a/styles.css
+++ b/styles.css
@@ -184,25 +184,7 @@ nav a{
 }
 
 
-.hoverunder{
-    padding-bottom: 1px;
-  
-    position: relative;
-}
 
-.hoverunder::before{
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 3px;
-    width: 0;
-    height: 2px;
-    background-color: var(--clr-primary-300);
-}
-
-.hoverunder:hover::before{
-    width: 100%;
-}
 
 
 .nav-toggle:checked ~ nav {
@@ -443,6 +425,7 @@ a{text-decoration: none;}
 
 .exo{
     font-family: 'Exo 2', sans-serif;
+    font-size: 1.1rem;
 }
 
 @media screen and (min-width: 760px){
@@ -587,6 +570,26 @@ a{text-decoration: none;}
         min-width: 480px;
         position: relative;
         right: 310px;
+    }
+
+    .hoverunder{
+        padding-bottom: 1px;
+      
+        position: relative;
+    }
+    
+    .hoverunder::before{
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 3px;
+        width: 0;
+        height: 2px;
+        background-color: var(--clr-primary-300);
+    }
+    
+    .hoverunder:hover::before{
+        width: 100%;
     }
 
 }
